syntax = "proto3";

package proto;

option go_package = "github.com/ramyadmz/goauth/services/auth/pkg/pb";

message RegisterRequest{
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse{
    bool success = 1;
    string message = 2;
    string token = 3;
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    bool success = 1;
    string message = 2;
    string token = 3;
}

message ValidateRequest{
    string token = 1;
}

message ValidateResponse{
    bool is_valid = 1;
    string subject = 2;
}


service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Validate (ValidateRequest) returns (ValidateResponse);


}

